--- a/source/_posts/设计模式之-单例模式.md
+++ b/source/_posts/设计模式之-单例模式.md
@@ -184,7 +184,7 @@ public final class AIOSCache extends Enum<AIOSCache>{
 
 - 如何设计一个线程内唯一的单例（Java提供了ThreadLocal并发工具类）
 
-![img](1.png)
+![ThreadLocal原理图](1.png)
 
 ```java
 public class AIOSCache {
