设计模式分类

--- a/source/_posts/设计模式之-单例模式.md
+++ b/source/_posts/设计模式之-单例模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-单例模式
 author: linWang
 date: 2022-04-08 10:45:08
 tags: Java设计模式
-categories: 设计模式
+categories: java设计模式--创建型
 ---
 
 > 本文详细的介绍了设计模式中最常用的“单例模式”的实现方法，并用实际的例子来编写示例。
