--- a/source/_posts/设计模式之-工厂模式.md
+++ b/source/_posts/设计模式之-工厂模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-工厂模式
 author: linWang
 date: 2022-04-08 17:07:34
 tags: java设计模式
-categories: 设计模式
+categories: java设计模式--创建型
 ---
 
 > 本文介绍了工厂模式的三种模式， 并简单的介绍了一下DI容器的实现原理
