--- a/source/_posts/设计模式之-桥接模式.md
+++ b/source/_posts/设计模式之-桥接模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-桥接模式
 author: linWang
 date: 2022-04-08 16:56:55
 tags: Java设计模式
-categories: 设计模式
+categories: java设计模式--结构型
 ---
 
 > 本文结合已经被广泛用烂的星巴克买咖啡举例，来理解桥接模式，并分析了JDBC中桥接模式的应用。
