--- a/source/_posts/设计模式之-原型模式.md
+++ b/source/_posts/设计模式之-原型模式.md
@@ -2,8 +2,8 @@
 title: 设计模式之-原型模式
 author: linWang
 date: 2022-04-08 17:08:01
-tags:
-categories:
+tags: java设计模式
+categories: java设计模式--创建型
 ---
 
 >本文介绍了原型模式的定义，并简单介绍了如何clone一个散列表。
