增加设计模式

--- a/source/_posts/设计模式之-代理模式.md
+++ b/source/_posts/设计模式之-代理模式.md
@@ -3,7 +3,7 @@ title: 设计模式之---代理模式
 author: linWang
 date: 2022-02-26 12:20:04
 tags: Java设计模式
-categories: java设计模式--结构型
+categories: Java设计模式--结构型
 ---
 
 >   本文详细的介绍了Java设计模式中的“代理模式”，并用实际的例子加深理解。
