修改设计模式的分类归属

--- a/source/_posts/设计模式之-原型模式.md
+++ b/source/_posts/设计模式之-原型模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-原型模式
 author: linWang
 date: 2022-04-08 17:08:01
 tags: Java设计模式
-categories: Java设计模式--创建型
+categories: Java设计模式之创建型
 ---
 
 >本文介绍了原型模式的定义，并简单介绍了如何clone一个散列表。
