--- a/source/_posts/设计模式之-命令模式.md
+++ b/source/_posts/设计模式之-命令模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-命令模式
 author: linWang
 date: 2022-09-04 11:38:16
 tags: Java设计模式
-categories: Java设计模式--行为型
+categories: Java设计模式之行为型
 ---
 
 > 本文给大家讲解行为型模式中的命令模式。
