--- a/source/_posts/设计模式之-装饰器模式.md
+++ b/source/_posts/设计模式之-装饰器模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-装饰器模式
 author: linWang
 date: 2022-09-04 10:58:09
 tags: Java设计模式
-categories: Java设计模式--结构型
+categories: Java设计模式之结构型
 ---
 
 > 本文通过JDK的IO流的数据结构来讲解装饰器模式
