--- a/source/_posts/设计模式之-适配模式.md
+++ b/source/_posts/设计模式之-适配模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-适配模式
 author: linWang
 date: 2022-09-04 11:03:40
 tags: Java设计模式
-categories: Java设计模式--结构型
+categories: Java设计模式之结构型
 ---
 
 > 本文给大家讲解结构型模式中的适配器模式，以及其常见的使用场景。
