--- a/source/_posts/设计模式之-门面模式.md
+++ b/source/_posts/设计模式之-门面模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-门面模式
 author: linWang
 date: 2022-09-04 11:09:50
 tags: Java设计模式
-categories: Java设计模式--结构型
+categories: Java设计模式之结构型
 ---
 
 > 本文给大家讲解结构型模式中的门面模式。
