--- a/source/_posts/设计模式之-建造者模式.md
+++ b/source/_posts/设计模式之-建造者模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-建造者模式
 author: linWang
 date: 2022-04-08 17:07:47
 tags: Java设计模式
-categories: Java设计模式--创建型
+categories: Java设计模式之创建型
 ---
 
 > 本文从两个问题出发，介绍了为什么要使用建造者、以及建造者和工厂模式的区别。
