--- a/source/_posts/设计模式之-状态模式.md
+++ b/source/_posts/设计模式之-状态模式.md
@@ -3,7 +3,7 @@ title: 设计模式之-状态模式
 author: linWang
 date: 2022-09-04 11:25:38
 tags: Java设计模式
-categories: Java设计模式--行为型
+categories: Java设计模式之行为型
 ---
 
 > 本文给大家讲解行为型模式中的状态模式。
